--- a/atividades/atividade01/index.html
+++ b/atividades/atividade01/index.html
@@ -24,9 +24,9 @@
             </div>
         </article>
     </main>
-    <footer>
-        <p></p>
-    </footer>
+    <div class="cr">
+        <p>&#169 CursoEmVídeo</p>
+    </div>
     <script src="script/index.js"></script>
 </body>
 </html>
