--- a/atividades/atividade03/index.html
+++ b/atividades/atividade03/index.html
@@ -13,28 +13,28 @@
     </header>
     <main>
         <article>
-            <div>
+            <div class="inicial">
                 <p>Início</p>
-                <input type="number" name="inicio" id="incio">
+                <input type="number" name="inicio" id="inicio">
             </div>
-            <div>
+            <div class="final">
                 <p>Fim</p>
                 <input type="number" name="termino" id="fim">
             </div>
-            <div>
+            <div class="passo">
                 <p>Passo</p>
                 <input type="number" name="passo" id="passo">
             </div>
-            <div>
+            <div class="botao">
                 <input type="button" value="Contar" id="contar">
             </div>
             <div>
-                <h3>Preparando contagem</h3>
+                <h3 id="status">Aguardando dados</h3>
                 <p id="resposta"></p>
             </div>
         </article>
     </main>
-    <div>
+    <div class="foot">
         <p>&#169 CursoEmVídeo</p>
     </div>
     <script src="script/script.js"></script>
